新增网址转换为二维码功能
